--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <title>Bhromaon</title>
 </head>
 <body>
+    <div class="section"> <!--First Section-->
     <header>
-        <div class="section"> <!--First Section-->
+        <div class=" section"> 
             <img src="images/landscape1.png" alt="Mountain viewpoint" class="img1">
             <div class="header_content">  
                 <div>
@@ -101,5 +102,6 @@
                 </div>
             </div>
            </main>
+           </div>
 </body>
 </html>
