--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <title>Bhromaon</title>
 </head>
 <body>
-    <div class="section"> <!--First Section-->
+    <div class="section"> 
     <header>
-        <div class=" section"> 
+        <div class="section first"> <!--First Section-->
             <img src="images/landscape1.png" alt="Mountain viewpoint" class="img1">
             <div class="header_content">  
                 <div>
@@ -34,10 +34,8 @@
                 </div>
             </div>
             <div class="nav_header">
-                <div class="nav_bar">
-                    <div>
-                        <p class="logo"> Bhromaon </p>
-                    </div>
+                <div class="nav_bar"> 
+                    <div> <p class="logo"> Bhromaon </p> </div>
                     <nav>
                         <ul class="nav">
                             <li><a class="nav_design" href="#">Who are we</a></li>
@@ -53,7 +51,7 @@
     <main>
         <div class="section second"> <!--Second Section-->
             <img src="images/landscape2.png" alt="Castle viewpoint" class="Img2">
-            <div class="box_content">
+            <div class="box_content1">
                 <div class="text1"> 
                     <h2 class="space">Why Choose Us</h2>
                     <p class="main_text space">
@@ -62,7 +60,8 @@
                     </p>
                     <p class="main_text space">
                         Dislike men who are so beguiled and demoralized by the charms of pleasure 
-                        of the moment, so blinded by desire, that.</p>
+                        of the moment, so blinded by desire, that.
+                    </p>
                     <button class="btn btn_explore">Explore Places</button>
                 </div>
                 <div class="pictures">
@@ -72,36 +71,81 @@
             </div>
             <div class="sub_section">
                 <div class="icon_container">
-                    <i class="fa fa-search space"></i>
-                    <h2>Search Places</h2>
+                    <i class="fa fa-search space"></i> <h2 class="space">Search Places</h2>
                 </div>
                 <div class="icon_container">
-                    <i class="fa fa-check-circle space"></i>
-                    <h2>Select Places</h2>
+                    <i class="fa fa-check-circle space"></i><h2 class="space">Select Places</h2>
                 </div>
                 <div class="icon_container">
-                    <i class="fa fa-thumbs-up space"></i>
-                    <h2>Book & Enjoy</h2>
+                     <i class="fa fa-thumbs-up space"></i><h2 class="space">Book & Enjoy</h2>
                 </div>            
             </div>
         </div>
-         <div class="section tree">
-                <img src="images/landscape5.png" alt="modern house" class="Img1">
-                <div class="box_content">
-                    <div class="info-box">
-                            <h5>Spain</h5>
-                            <h4>Grand Spain Madrid</h4>
-                            <p class="main_text">
-                                But I must explain to you how all this 
-                                mistaken idea of account to denouncing pleasure 
-                                and praising pain was account  born and I account will 
-                                give you a complete account of the system
-                            </p>
-                            <button class="btn btn_book">BOOK NOW</button> 
+        <div class="section third"> <!--Third Section-->
+            <img src="images/landscape5.png" alt="House viewpoint" class="Img5">
+            <div class="box_content2">
+                <div class="info_box1">
+                    <h5 class="space">Spain</h5>
+                    <h4>Grand Spain Madrid</h4>
+                    <p class="main_text space">
+                        But I must explain to you how all this mistaken idea of account 
+                        to denouncing pleasure and praising pain was account born and
+                        I account will give you a complete account of the system.
+                    </p>
+                    <button class="btn btn_book">BOOK NOW</button> 
+                </div>
+            </div>
+        </div>
+        <div class="section fourth"> <!--Fourth Section-->
+            <img src="images/landscape6.png" alt="Horizon viewpoint" class="Img6">
+            <div class="box_content3"> 
+                <div class="info_box1">
+                    <h5 class="space">Spain</h5>
+                    <h4>Grand Spain Madrid</h4>
+                    <p class="main_text space">
+                        But I must explain to you how all this mistaken idea of account 
+                        to denouncing pleasure and praising pain was account born and
+                        I account will give you a complete account of the system.
+                    </p>
+                    <button class="btn btn_book">BOOK NOW</button> 
+                </div>
+            </div>
+        </div>
+        <div class="section fifth">  <!--Fifth Section-->
+            <img src="images/testimonial.png" alt="Man in the mountain" class="Img7">
+            <div class="box_content4"> 
+                <div>
+                    <h2 class="title">What Our  Tourist Say</h2>
+                </div>
+                <div class="info_box2">
+                    <img src="images/tourist.png" alt="Tourist" class="img8">
+                    <div class="text2">
+                        <h4 class="space">Sam Sumon</h4>
+                        <p class="main_text space"> <i class="fas fa-quote-left"></i>
+                            But I must explain to you how all this mistaken idea of account to denouncinpleasure 
+                            and praising pain  But I must explain to you how all this mistaken idea of account to 
+                            nai denouncing pleasure and praising pain was account  born and I account will give 
+                            you a complete account of the system was account born and I account will give you a nai 
+                            the complete account of the system.
+                        </p>
                     </div>
                 </div>
             </div>
-           </main>
-           </div>
+        </div>
+    </main>
+    </div>
+    <footer>
+            <div class="logo_container">
+                <p class="logo"> Bhromaon </p>
+                <h5 class="phrase_slogan space">Safe Travel Anywhere</h5>
+            </div>
+            <div class="icons">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-youtube"></i>
+                <i class="fab fa-pinterest"></i>
+            </div>
+    </footer>
 </body>
 </html>
